<resources>

    <string name="app_name">Time\'s Up!</string>

    <string name="login"><b>Log-in</b></string>
    <string name="username_hint">Enter username</string>
    <string name="password_hint">Enter password</string>
    <string name="register_link"><u>New User? Register here!</u></string>

    <string name="basic_info"><b>Basic Info:</b></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="contact_no">Contact No.</string>
    <string name="account_info"><b>Account Information:</b></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="register">Register</string>

    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="accnt_info_nav">Account Info</string>
    <string name="accnt_sett_nav">Account Settings</string>
    <string name="about_nav">About</string>
    <string name="logout_nav">Log-out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="help">Help</string>

    <string name="add_title">Add Title</string>
    <string name="add_description">Add Description</string>
    <string name="cancel"><b>CANCEL</b></string>
    <string name="add"><b>OKAY</b></string>
    <string name="date"><u>12/12/12</u></string>
    <string name="time">12:00</string>

    <string name="subscribe"><u><i>Subscribe to get the latest features and updates!</i></u></string>

    <string name="help_content">Hoho.. you have come for help!\n\nThe application is pretty simple!!!\n\n
        <b>Adding a new deadline:</b>\n
        To add a deadline, you need to click the Add Button near below the device\'s screen.
        A dialog will appear and will ask you about the deadline\'s title, you can also add
        a short description to it.\n
        Set the time and date by pressing the time and date texts at the dialog.\n
        By pressing the \'Okay\' button, an alarm will be set according to your provided time\n\n
        <b>Editing a deadline:</b>\n
        To edit a deadline, simply click the deadline item in the list and a dialog will ask for confirmation.\n
        You can update the title, description, date and time of the deadline you wish to.\n\n
        <b>Deleting a deadline:</b>\n
        If you wish to delete a deadline, simply long press the item you wish to and a dialog will ask for confirmation.\n
        The alarm you\'ve set will also be deleted.\n\n
        <b>Deleting all Deadlines:</b>\n
        If you wish to delete all the deadlines you\'ve created, simply click the Menu button on the upper right of the screen,
        and click \'Delete All\'.\n
        However, a warning, this method will not delete all the alarms you\'ve set (a feature to be updated), so it is better to
        individually delete each deadline you wish to.\n\n
        <b>Viewing your profile:</b>\n
        You can view your profile details through the Account Information in the Navigation Menu.\n
        Additionally, you can see the current number of deadlines you have to accomplish!\n\n
        <b>Editing your account:</b>\n
        You can edit your profile details through the Account Settings in the Navigation Menu.\n
        However, you can not edit your username and password.\n\n
        This app is hoped to be more furnished and updated.
        \n\n<b>Keep programming!</b></string>

    <string name="about_desc">Time\'s Up is a deadline manager application developed for students
        who wish to keep track of the deadlines they must accomplish. A submission as the
        final project for CS0011 - Mobile Programming.</string>
    <string name="trademark">Time\'s Up.2020.HJVR.</string>
    <string name="updates_desc">This is hoped to have more future changes and updates.</string>

    <string name="logout_confirmation">Do you want to log-out?</string>
    <string name="logout">Log-out</string>
    <string name="yes">Yes</string>
    <string name="goodbye">Good bye</string>
    <string name="delete_title">Delete Deadline?</string>
    <string name="delete_message">Are you sure you want to delete this deadline reminder?</string>
    <string name="delete_cancelled">Delete cancelled.</string>
    <string name="delete">Delete</string>
    <string name="deadline_deleted">Deadline deleted.</string>
    <string name="edit_deadline">Edit Deadline?</string>
    <string name="edit_question">Do you want to edit this?</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_all_title">Delete All Deadlines?</string>
    <string name="delete_all_message">Are you sure you want to delete all deadlines?</string>
    <string name="logout_cancelled">Log-out cancelled.</string>
    <string name="delete_all_complete">Deleted all deadlines...</string>
    <string name="no_deadline">No deadlines to be deleted... Add one.</string>
    <string name="sampleUserName">UserName</string>
    <string name="sampleEmail">Email</string>
    <string name="sampleContactNo">Contact No.</string>
    <string name="edit_account">Edit Account Details?</string>
    <string name="edit_account_message">Are you sure you want to edit your account?</string>
    <string name="user_created">User created.</string>
    <string name="user_exists">User already exists.</string>
    <string name="password_mismatch">Password do not match.</string>
    <string name="fill_all">Please fill all fields.</string>
</resources>
