<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item android:id="@+id/account_info"
            android:title="@string/accnt_info_nav"
            android:icon="@drawable/account_circle"/>
        <item android:id="@+id/acount_settings"
            android:title="@string/accnt_sett_nav"
            android:icon="@drawable/settings_icon"/>
        <item android:id="@+id/about"
            android:title="@string/about_nav"
            android:icon="@drawable/info_icon"/>
        <item android:id="@+id/logout"
            android:title="@string/logout_nav"
            android:icon="@drawable/logout_icon"/>
    </group>

</menu>