<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountSettingsFragment"
    android:background="@color/backGround"
    android:layout_marginTop="?attr/actionBarSize">


    <ImageView
        android:id="@+id/accountImage"
        android:layout_width="@dimen/half_logo"
        android:layout_height="@dimen/half_logo"
        android:src="@drawable/account_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/account_head_top"
        />

    <EditText
        android:id="@+id/edit_firstName"
        android:layout_width="@dimen/name_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textCapWords"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountImage"
        android:layout_marginTop="@dimen/account_desc" />

    <EditText
        android:id="@+id/edit_lastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="@dimen/text_margin"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textCapWords"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_firstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_firstName" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_firstName" />

    <EditText
        android:id="@+id/edit_contactNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/contact_no"
        android:inputType="phone"
        android:maxLength="11"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorAccent"
        android:text="Edit Details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_contactNo" />

</androidx.constraintlayout.widget.ConstraintLayout>